[gd_scene load_steps=4 format=3 uid="uid://dlrtl565cb3a8"]

[ext_resource type="Script" path="res://scenes/GameScene/Elements/Knowledge/Knowledge.gd" id="1_vjnnu"]
[ext_resource type="Texture2D" uid="uid://dpykb773vxe42" path="res://assets/images/blankImage.jpg" id="2_grms4"]
[ext_resource type="Theme" uid="uid://bv2a6wh6lyl20" path="res://default_theme.tres" id="3_vy2lx"]

[node name="Knowledge" type="Control"]
custom_minimum_size = Vector2(360, 192)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_vjnnu")

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("2_grms4")
stretch_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_vy2lx")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Knowledge"
horizontal_alignment = 1

[node name="CurrentLevel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Level: "

[node name="Label_Nivel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "1"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "...."
horizontal_alignment = 1

[node name="NextLevel" type="Label" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Next level: "
horizontal_alignment = 2

[node name="Label_Proximo_Nivel" type="Label" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "2"
horizontal_alignment = 2

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
